# chatter

./: .flake8  .gitignore  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
chat/: admin.py  conftest.py  consumers.py  middlewares.py  models.py  routing.py  serializers.py  test.py  urls.py  utils.py  views.py
chat/migrations/: 0001_initial.py  0002_remove_chatmessage_date_sent_chatmessage_sent_on_and_more.py  0003_alter_chatmessage_message.py  0004_rename_from_chat_group_chatmessage_chat_group_and_more.py  0005_delete_chatgroupinvite.py
chat/tests/: conftest.py  test.py  test_chat.py  test_chat_consumers.py  test_chat_views.py
chatter/: asgi.py  settings.py  urls.py  utils.py
frontend/: .eslintrc.json  package-lock.json  package.json  urls.py  webpack.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/: ActivityBar.js  ActivityView.js  BaseFormDialog.js  ChatGroup.js  FriendList.js  Friends.js  PendingFriends.js  Sidebar.js  UserForm.css  UserForm.js
frontend/src/pages/: Dashboard.js  Login.css  Login.js  NotFound.js  Register.js
frontend/src/utils/: AuthContext.js  RequireAuth.js  consts.js  examples.js  genericListSlice.js  useAxios.js  useAxiosProtected.js  useChatGroupStore.js  useFriendsListStore.js  useMembersStore.js  utils.js  (+3 more)
frontend/templates/: index.html
scripts/: install-dev-tools.sh  setup.sh
users/: admin.py  models.py  paginations.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_friendrequest_and_more.py  0002_friendship_chatteruser_friends.py
users/tests/: conftest.py  test_users.py
(+3 files in other folders)
