[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "chatter"
description = "Hobby in-the-works chat app"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = ["Framework :: Django", "Programming Language :: Python :: 3"]
dependencies = [
    "daphne>=4.0.0",
    "Django>=4.2",
    "djangorestframework>=3.14",
    "djangorestframework-simplejwt>=5.2",
    "channels>=4.0",
    "python-dotenv>=1.0",
]
dynamic = ["version"]

[project.optional-dependencies]
rest = ["black>=23.3.0", "flake8>=6.0"]

[tool.setuptools.packages]
find = {}
